slskd/01-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: slskd
  namespace: p2p
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: slskd
  template:
    metadata:
      labels:
        app: slskd
    spec:
      containers:
      - name: slskd
        image: msd117/slskd:0.1.10-0.22.2
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
        ports:
        - name: web
          containerPort: 5030
        - name: incoming
          containerPort: 50300
        volumeMounts:
        - name: dev-tun
          mountPath: /dev/net/tun
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: shares
          mountPath: /shares
        - name: nfs-downloads
          mountPath: /nfs/downloads
      volumes:
      - name: dev-tun
        hostPath:
          path: /dev/net/tun
      - name: config
        persistentVolumeClaim:
          claimName: slskd-config
      - name: downloads
        persistentVolumeClaim:
          claimName: p2p-downloads
      - name: shares
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/data/media/shares
      - name: nfs-downloads
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/data/media/downloads
